--- a/learn-combinatorics-api/docker-compose.yml
+++ b/learn-combinatorics-api/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    env_file:
+      - .env.prod
+    volumes:
+    - .:/app
+    command: ["./scripts/start.sh"]
     ports:
-      - "3000:3000"
+      - "80:80"
