--- a/learn-combinatorics-fe/package.json
+++ b/learn-combinatorics-fe/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ant-design-pro",
-  "version": "4.5.0",
+  "name": "learn-combinatorics",
+  "version": "1.0.0",
   "private": true,
-  "description": "An out-of-box UI solution for enterprise applications",
+  "description": "A platform to allow students to learn practice combinatorics.",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "umi build",
@@ -58,6 +58,7 @@
     "antd": "^4.9.4",
     "bizcharts": "^4.1.10",
     "classnames": "^2.2.6",
+    "dotenv": "^9.0.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "lodash.debounce": "^4.0.8",
