--- a/learn-combinatorics-api/config/storage.yml
+++ b/learn-combinatorics-api/config/storage.yml
@@ -11,6 +11,7 @@ amazon:
    service: S3
    access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
    secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+   host:  <%= ENV['HOST'] %>
    region: <%= ENV['AWS_REGION'] %>
    bucket: <%= ENV['AWS_BUCKET'] %>
 
